--- a/index.html
+++ b/index.html
@@ -4,9 +4,37 @@
     <title>Portfolio TailwindCSS</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="src/output.css">
+    <link rel="stylesheet" href="./dist/output.css">
   </head>
   <body>
-    <h1>Hello World!</h1>
+
+    <!-- Hero Section Start -->
+    <section id="home" class="pt-36">
+      <div class="container">
+        <div class="flex flex-wrap">
+          <!-- Hero Section Left Start -->
+          <div class="w-full self-center px-4 lg:w-1/2">
+            <h1 class="text-base font-semibold text-primary md:text-xl">Halo Semua 👋, saya <span class="block font-bold text-dark text-4xl lg:text-5xl mt-1">Rizqi Assyaufi</span></h1>
+            <h2 class="font-medium text-slate-500 text-lg mb-5 lg:text-2xl">Software Developer | Blogger</h2>
+            <p class="font-medium text-slate-400 mb-10">Belajar web programming itu mudah dan menyenangkan bukan. <span class="font-bold text-dark">Bukan!</span></p>
+            <a href="#" class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out">Hubungi Saya</a>
+          </div>
+          <!-- Hero Section Left End -->
+          <!-- Hero Section Right Start -->
+          <div class="w-full self-end px-4 lg:w-1/2">
+            <div class="mt-10 relative lg:mt-0 lg:right-0">
+              <img src="dist/img/bandithijo.png" alt="bandithijo" class="max-w-full mx-auto">
+              <span class="absolute -bottom-0 -z-10 left-1/2 -translate-x-1/2 scale-100 top-4 sm:scale-125 sm:top-16 md:scale-125 md:top-16">
+                <svg width="400" height="400" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+                  <path fill="#14b8a6" d="M48.7,-74.8C61.7,-67.4,69.9,-51.5,68.1,-36.6C66.4,-21.7,54.7,-7.8,51.9,7C49.2,21.8,55.2,37.5,49.1,40.1C43,42.7,24.7,32.2,12.3,30.8C-0.1,29.3,-6.6,36.8,-14.7,39.3C-22.9,41.9,-32.7,39.4,-42.1,33.6C-51.5,27.9,-60.5,19,-63.9,8C-67.3,-2.9,-65.2,-15.9,-55.6,-20.7C-46.1,-25.5,-29.1,-22.2,-18.6,-30.7C-8.1,-39.3,-4,-59.8,6.9,-70.5C17.8,-81.2,35.7,-82.2,48.7,-74.8Z" transform="translate(100 100)" />
+                </svg>
+              </span>
+            </div>
+          </div>
+          <!-- Hero Section Right End -->
+        </div>
+      </div>
+    </section>
+    <!-- Hero Section End -->
   </body>
 </html>
