--- a/index.html
+++ b/index.html
@@ -4,12 +4,58 @@
     <title>Portfolio TailwindCSS</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./dist/output.css">
+    <link rel="stylesheet" href="./dist/css/output.css">
   </head>
   <body>
 
+    <!-- Header Start -->
+    <header class="bg-transparent absolute top-0 left-0 w-full flex items-center z-10">
+      <div class="container">
+        <div class="flex items-center justify-between relative">
+          <div class="px-4">
+            <a href="#home" class="font-bold text-lg text-primary block py-6">rizqiassyaufi</a>
+          </div>
+          <div class="flex items-center px-4">
+            <!-- Hambuger Menu Start -->
+            <button id="hamburger" name="hamburger" type="button" class="block absolute right-4 lg:hidden">
+              <span class="hamburger-line transition duration-300 ease-in-out origin-top-right"></span>
+              <span class="hamburger-line transition duration-300 ease-in-out"></span>
+              <span class="hamburger-line transition duration-300 ease-in-out origin-bottom-right"></span>
+            </button>
+            <!-- Hambuger Menu End -->
+
+            <!-- Nav Menu Start -->
+            <nav id="nav-menu" class="hidden absolute py-5 bg-white shadow-lg rounded-lg max-w-[250px] w-full right-4 top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none">
+              <ul class="block lg:flex">
+                <li class="group">
+                  <a href="#home" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Beranda</a>
+                </li>
+                <li class="group">
+                  <a href="#about" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Tentang Saya</a>
+                </li>
+                <li class="group">
+                  <a href="#profolio" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Protfolio</a>
+                </li>
+                <li class="group">
+                  <a href="#clients" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Clients</a>
+                </li>
+                <li class="group">
+                  <a href="#blog" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Blog</a>
+                </li>
+                <li class="group">
+                  <a href="#contact" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Contact</a>
+                </li>
+              </ul>
+            </nav>
+            <!-- Nav Menu End -->
+          </div>
+        </div>
+      </div>
+    </header>
+    <!-- Header End -->
+
     <!-- Hero Section Start -->
-    <section id="home" class="pt-36">
+    <section id="home" class="pt-32">
       <div class="container">
         <div class="flex flex-wrap">
           <!-- Hero Section Left Start -->
@@ -20,6 +66,7 @@
             <a href="#" class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out">Hubungi Saya</a>
           </div>
           <!-- Hero Section Left End -->
+
           <!-- Hero Section Right Start -->
           <div class="w-full self-end px-4 lg:w-1/2">
             <div class="mt-10 relative lg:mt-0 lg:right-0">
@@ -38,7 +85,7 @@
     <!-- Hero Section End -->
 
     <!-- About Section Start -->
-    <section id="about" class="pt-36 pb-32">
+    <section id="about" class="pt-32 pb-32">
       <div class="container">
         <div class="flex flex-wrap">
           <!-- Hero Section Left Start -->
@@ -48,6 +95,7 @@
             <p class="font-meidum text-base text-secondary max-w-xl lg:text-lg">Perjalanan saya dimulai dari membaca buku teks sebagai mantan Mahasiswa Kedokteran hingga menggali bug sebagai seorang Insinyur Perangkat Lunak.</p>
           </div>
           <!-- Hero Section Left End -->
+
           <!-- Hero Section Right Start -->
           <div class="w-full px-4 lg:w-1/2">
             <h3 class="font-semibold text-dark text-2xl mb-4 lg:text-3xl lg:pt-20">Mari berteman</h3>
@@ -80,5 +128,7 @@
       </div>
     </section>
     <!-- About Section End -->
+
+    <script src="./dist/js/script.js"></script>
   </body>
 </html>
