feat: portfolio & clients

--- a/index.html
+++ b/index.html
@@ -129,6 +129,82 @@
     </section>
     <!-- About Section End -->
 
+    <!-- Portfolio Section Start -->
+    <section id="portfolio" class="pt-36 pb-16 bg-slate-100">
+      <div class="container">
+        <div class="w-full px-4">
+          <div class="max-w-2xl mx-auto text-center mb-16">
+            <h4 class="font-semibold text-lg text-primary mb-2">Portfolio</h4>
+            <h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl md:text-5xl">Project Terbaru</h2>
+            <p class="font-medium text-md text-secondary md:text-lg">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum aliquam laboriosam mollitia hic iure blanditiis repellendus ullam. Praesentium, est rerum.</p>
+          </div>
+        </div>
+
+        <div class="w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto">
+          <div class="mb-12 p-4 md:w-1/2">
+            <div class="rounded-md shadow-md overflow-hidden">
+              <img src="./dist/img/portfolio/portfolio_01.gif" alt="Wiswis" width="w-full">
+            </div>
+            <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Wiswis</h3>
+            <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae molestiae alias eveniet!</p>
+          </div>
+          <div class="mb-12 p-4 md:w-1/2">
+            <div class="rounded-md shadow-md overflow-hidden">
+              <img src="./dist/img/portfolio/portfolio_02.gif" alt="Wiswis Seller" width="w-full">
+            </div>
+            <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Wiswis Seller</h3>
+            <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae molestiae alias eveniet!</p>
+          </div>
+          <div class="mb-12 p-4 md:w-1/2">
+            <div class="rounded-md shadow-md overflow-hidden">
+              <img src="./dist/img/portfolio/portfolio_03.gif" alt="PT. Bintang Digital Asia" width="w-full">
+            </div>
+            <h3 class="font-semibold text-xl text-dark mt-5 mb-3">PT. Bintang Digital Asia</h3>
+            <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae molestiae alias eveniet!</p>
+          </div>
+          <div class="mb-12 p-4 md:w-1/2">
+            <div class="rounded-md shadow-md overflow-hidden">
+              <img src="./dist/img/portfolio/portfolio_04.gif" alt="Buddyz.co" width="w-full">
+            </div>
+            <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Buddyz.co</h3>
+            <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae molestiae alias eveniet!</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Portfolio Section End -->
+
+    <!-- client Section Start -->
+    <section id="clients" class="pt-36 pb-32 bg-slate-700">
+      <div class="container">
+        <div class="w-full px-4">
+          <div class="max-w-2xl mx-auto text-center mb-16">
+            <h4 class="font-semibold text-lg text-primary mb-2">Clients</h4>
+            <h2 class="font-bold text-white text-3xl mb-4 sm:text-4xl md:text-5xl">Yang Pernah Bekerjasama</h2>
+            <p class="font-medium text-md text-secondary md:text-lg">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo, quidem.</p>
+          </div>
+        </div>
+
+        <div class="w-full px-4">
+          <div class="flex flex-wrap items-center justify-center">
+            <a href="#" class="max-w-[120px] mx-4 py-4 opacity-50 lg:mx-6 xl:mx-8">
+              <img src="./dist/img/logo/teltonika.png" alt="teltonika">
+            </a>
+            <a href="#" class="max-w-[120px] mx-4 py-4 opacity-50 lg:mx-6 xl:mx-8">
+              <img src="./dist/img/logo/telkomsel-enterprise.png" alt="telkomsel enterprise">
+            </a>
+            <a href="#" class="max-w-[120px] mx-4 py-4 opacity-50 lg:mx-6 xl:mx-8">
+              <img src="./dist/img/logo/aws.png" alt="aws">
+            </a>
+            <a href="#" class="max-w-[120px] mx-4 py-4 opacity-50 lg:mx-6 xl:mx-8">
+              <img src="./dist/img/logo/infomedia.png" alt="infomedia">
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- client Section End -->
+
     <script src="./dist/js/script.js"></script>
   </body>
 </html>
