--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
   <head>
     <title>Portfolio TailwindCSS</title>
     <meta charset="UTF-8">
@@ -373,6 +373,12 @@
       </div>
     </footer>
     <!-- Footer Section End -->
+
+    <!-- Back to Top Start -->
+    <a href="#home" class="fixed bottom-4 right-4 z-[9999] hidden h-14 w-14 items-center justify-center rounded-full bg-primary p-4 hover:animate-pulse" id="to-top">
+      <span class="mt-2 block h-5 w-5 rotate-45 border-l-2 border-t-2"></span>
+    </a>
+    <!-- Back to Top End -->
 
     <script src="./dist/js/script.js"></script>
   </body>
