--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
           <!-- Hero Section Left Start -->
           <div class="w-full self-center px-4 lg:w-1/2">
             <h1 class="text-base font-semibold text-primary md:text-xl">Halo Semua 👋, saya <span class="mt-1 block text-4xl font-bold text-dark dark:text-white lg:text-5xl">Rizqi Assyaufi</span></h1>
-            <h2 class="mb-5 text-lg font-medium text-secondary lg:text-2xl">Software Developer | Blogger</h2>
-            <p class="mb-10 font-medium text-secondary">Belajar web programming itu mudah dan menyenangkan bukan. <span class="font-bold text-dark dark:text-white">Bukan!</span></p>
+            <h2 class="mb-5 text-lg font-medium text-secondary lg:text-2xl">Software Engineer | Blogger | Linux User</h2>
+            <p class="mb-10 font-medium text-secondary">Belajar programming itu mudah dan menyenangkan bukan. <span class="font-bold text-dark dark:text-white">Bukan!</span></p>
             <a href="#" class="rounded-full bg-primary px-8 py-3 text-base font-semibold text-white transition duration-300 ease-in-out hover:opacity-80 hover:shadow-lg">Hubungi Saya</a>
           </div>
           <!-- Hero Section Left End -->
@@ -111,7 +111,7 @@
           <!-- Hero Section Left Start -->
           <div class="mb-10 w-full px-4 lg:w-1/2">
             <h4 class="mb-3 text-lg font-bold uppercase text-primary">Tentang Saya</h4>
-            <h2 class="mb-5 max-w-md text-3xl font-bold text-dark dark:text-white lg:text-4xl">Yuk, belajar web programming di WPU!</h2>
+            <h2 class="mb-5 max-w-md text-3xl font-bold text-dark dark:text-white lg:text-4xl">Yuk, belajar web programming!</h2>
             <p class="font-meidum max-w-xl text-base text-secondary lg:text-lg">Perjalanan saya dimulai dari membaca buku teks sebagai mantan Mahasiswa Kedokteran hingga menggali bug sebagai seorang Insinyur Perangkat Lunak.</p>
           </div>
           <!-- Hero Section Left End -->
@@ -156,7 +156,7 @@
           <div class="mx-auto mb-16 max-w-2xl text-center">
             <h4 class="mb-2 text-lg font-semibold text-primary">Portfolio</h4>
             <h2 class="mb-4 text-3xl font-bold text-dark dark:text-white sm:text-4xl md:text-5xl">Project Terbaru</h2>
-            <p class="text-md font-medium text-secondary md:text-lg">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum aliquam laboriosam mollitia hic iure blanditiis repellendus ullam. Praesentium, est rerum.</p>
+            <p class="text-md font-medium text-secondary md:text-lg">Berikut ini adalah sebagian dari project yang pernah saya kerjakan.</p>
           </div>
         </div>
 
@@ -165,29 +165,29 @@
             <div class="overflow-hidden rounded-md shadow-md">
               <img src="./dist/img/portfolio/portfolio_01.gif" alt="Wiswis" width="w-full">
             </div>
-            <h3 class="mb-3 mt-5 text-xl font-semibold text-dark dark:text-white">Wiswis</h3>
-            <p class="text-base font-medium text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae molestiae alias eveniet!</p>
+            <h3 class="mb-3 mt-5 text-xl font-semibold text-dark dark:text-white">Wispay</h3>
+            <p class="text-base font-medium text-secondary">Wispay is a mobile app designed for selling credits, handling various payment services (PPOB - Payment Point Online Bank), and offering a range of other engaging services.</p>
           </div>
           <div class="mb-12 p-4 md:w-1/2">
             <div class="overflow-hidden rounded-md shadow-md">
               <img src="./dist/img/portfolio/portfolio_02.gif" alt="Wiswis Seller" width="w-full">
             </div>
-            <h3 class="mb-3 mt-5 text-xl font-semibold text-dark dark:text-white">Wiswis Seller</h3>
-            <p class="text-base font-medium text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae molestiae alias eveniet!</p>
+            <h3 class="mb-3 mt-5 text-xl font-semibold text-dark dark:text-white">Wiswis</h3>
+            <p class="text-base font-medium text-secondary">Wiswis (previously known as "Team Buying") is a mobile application striving to evolve into a social gaming platform that captivates casual gamers, encouraging collaborative play.</p>
           </div>
           <div class="mb-12 p-4 md:w-1/2">
             <div class="overflow-hidden rounded-md shadow-md">
               <img src="./dist/img/portfolio/portfolio_03.gif" alt="PT. Bintang Digital Asia" width="w-full">
             </div>
-            <h3 class="mb-3 mt-5 text-xl font-semibold text-dark dark:text-white">PT. Bintang Digital Asia</h3>
-            <p class="text-base font-medium text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae molestiae alias eveniet!</p>
+            <h3 class="mb-3 mt-5 text-xl font-semibold text-dark dark:text-white">PT. Bintang Digital Asia (Wisfleet)</h3>
+            <p class="text-base font-medium text-secondary">Wisfleet is a Fleet Management System (FMS), refers to the management of a company's fleet aimed at maximizing vehicle efficiency, fuel consumption, enhancing productivity, monitoring scheduled maintenance, and vehicle component repairs, as well as improving driver safety.</p>
           </div>
           <div class="mb-12 p-4 md:w-1/2">
             <div class="overflow-hidden rounded-md shadow-md">
               <img src="./dist/img/portfolio/portfolio_04.gif" alt="Buddyz.co" width="w-full">
             </div>
             <h3 class="mb-3 mt-5 text-xl font-semibold text-dark dark:text-white">Buddyz.co</h3>
-            <p class="text-base font-medium text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae molestiae alias eveniet!</p>
+            <p class="text-base font-medium text-secondary">Buddyz - Travel Platform Powered by Locals.</p>
           </div>
         </div>
       </div>
@@ -201,7 +201,7 @@
           <div class="mx-auto mb-16 max-w-2xl text-center">
             <h4 class="mb-2 text-lg font-semibold text-primary">Clients</h4>
             <h2 class="mb-4 text-3xl font-bold text-white dark:text-dark sm:text-4xl md:text-5xl">Yang Pernah Bekerjasama</h2>
-            <p class="text-md font-medium text-secondary md:text-lg">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo, quidem.</p>
+            <p class="text-md font-medium text-secondary md:text-lg">Daftar client yang pernah bekerja sama.</p>
           </div>
         </div>
 
@@ -317,11 +317,11 @@
       <div class="container">
 	<div class="flex flex-wrap">
 	  <div class="mb-12 w-full px-4 font-medium text-slate-300 md:w-1/3">
-	    <h2 class="mb-5 text-4xl font-bold text-white">WPU</h2>
+	    <h2 class="mb-5 text-4xl font-bold text-white">rizqiassyaufi</h2>
 	    <h3 class="mb-2 text-2xl font-bold">Hubungi Kami</h3>
 	    <p>rizqiassyaufi@gmail.com</p>
-	    <p>Jln. Cempaka Putih Barat XI No. 51</p>
-	    <p>Jakarta Pusat</p>
+	    <p>Balikpapan, Kalimantan Timur</p>
+	    <p>Indonesia</p>
 	  </div>
 
 	  <div class="mb-12 w-full px-4 md:w-1/3">
